--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -12,7 +12,7 @@
         <%= link_to "See One Sheet", onesheet_customer_path(@customer) %>
       </div>
       <div class="col s3 l3">
-        <%= link_to "Download One Sheet", onesheet_doc_customer_path(@customer) %>
+        <%= link_to "Download One Sheet", docx_customer_path(@customer) %>
       </div>
     </div>
     <hr />
