--- a/app/views/customers/onesheet.html.erb
+++ b/app/views/customers/onesheet.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="one-sheet-logo col s5 l5 offset-s2 offset-l2">
-        <%= image_path("#{@customer.logo}", style:'height: 180px; width: 100%; object-fit: contain;') %>
+        <%= image_tag("#{@customer.logo}", style:'height: 180px; width: 100%; object-fit: contain;') %>
       </div>
       <div class="one-sheet-sounds-like col s3 l3 offset-s2 offset-l2">
         <h5>Sounds Like</h5>
@@ -15,11 +15,11 @@
     </div>
     <div class="row">
       <div class="one-sheet-main-photo col s9 l9">
-        <%= image_path("#{@customer.main_photo}", style:'max-height: 420px; width: 100%; object-fit: contain') %>
+        <%= image_tag("#{@customer.main_photo}", style:'max-height: 420px; width: 100%; object-fit: contain') %>
       </div>
       <div class="side-photos col s3 l3">
-        <%= image_path("#{@customer.live_photo}", style:'height: auto; width: 100%; object-fit: contain') %>
-        <%= image_path("#{@customer.misc_photo1}", style: 'height: auto; width: 100%; object-fit: contain', id: "misc_photo1") %>
+        <%= image_tag("#{@customer.live_photo}", style:'height: auto; width: 100%; object-fit: contain') %>
+        <%= image_tag("#{@customer.misc_photo1}", style: 'height: auto; width: 100%; object-fit: contain', id: "misc_photo1") %>
       </div>
     </div>
     <div class="row">
@@ -29,11 +29,11 @@
     </div>
     <div class="row center press-links-row">
       <div class="one-sheet-misc-2 col s4 l4">
-        <%= image_path("#{@customer.misc_photo2}", style: 'height: 150px; width: 100%; object-fit: contain') %>
+        <%= image_tag("#{@customer.misc_photo2}", style: 'height: 150px; width: 100%; object-fit: contain') %>
       </div>
       <div class="one-sheet-press-links col s4 l4">
         <% if @customer.press_link1 != nil %>
-          <h5><%= image_path('news-icon.png', style: 'width: 10%;') %> PRESS</h5>
+          <h5><%= image_tag('news-icon.png', style: 'width: 10%;') %> PRESS</h5>
           <%= link_to("#{@customer.press_link1}", "#{@customer.press_link1}") %>
           <%= link_to("#{@customer.press_link2}", "#{@customer.press_link2}") %>
           <%= link_to("#{@customer.press_link3}", "#{@customer.press_link3}") %>
@@ -43,18 +43,18 @@
         <div class="col s12 l12 one-sheet-icons">
           <div class="col s5 l5 one-sheet-icon">
             <% if @customer.soundcloud != nil %>
-              <%= link_to image_path("soundcloud-icon.png", width: '60%;'), "#{@customer.soundcloud}", title: "#{@customer. soundcloud}" %>
+              <%= link_to image_tag("soundcloud-icon.png", width: '60%;'), "#{@customer.soundcloud}", title: "#{@customer. soundcloud}" %>
             <% end %>
             <% if @customer.youtube != nil %>
-              <%= link_to image_path("youtube-icon.png", width: '60%;'), "#{@customer.youtube}", title: "#{@customer.youtube}"   %>
+              <%= link_to image_tag("youtube-icon.png", width: '60%;'), "#{@customer.youtube}", title: "#{@customer.youtube}"   %>
             <% end %>
           </div>
           <div class="col s5 l5 one-sheet-icon">
             <% if @customer.bandcamp != nil %>
-              <%= link_to image_path("bandcamp-icon.png", width: '60%;'), "#{@customer.bandcamp}", title: "#{@customer. bandcamp}" %>
+              <%= link_to image_tag("bandcamp-icon.png", width: '60%;'), "#{@customer.bandcamp}", title: "#{@customer. bandcamp}" %>
             <% end %> 
             <% if @customer.other_site != nil %>
-              <%= link_to image_path("other-site-icon.png", width: '60%;'), "#{@customer.other_site}", title: "#{@customer. other_site}" %>
+              <%= link_to image_tag("other-site-icon.png", width: '60%;'), "#{@customer.other_site}", title: "#{@customer. other_site}" %>
             <% end %>
           </div>
         </div>
