--- a/app/views/welcome/_form.html.erb
+++ b/app/views/welcome/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(Customer.new, url: customers_path) do |f| %>
+<%= form_for(Customer.new, url: customers_path, multipart: true) do |f| %>
   <div class="row">
     <div class="input-field col s12 l12">
       <%= f.label :band_name %>
