--- a/app/views/customers/onesheet.html.erb
+++ b/app/views/customers/onesheet.html.erb
@@ -1,10 +1,10 @@
 <body id="onesheet">
   <div class="container">
     <div class="row">
-      <div class="one-sheet-logo col s5 l5 offset-s2 offset-l2">
-        <%= image_tag(@customer.logo.url, style:"height: 180px; width: 100%; object-fit: contain;") %>
+      <div class="one-sheet-logo col s7 l7 offset-s2 offset-l1">
+      	<h1 class="center"><%= @customer.band_name %></h1>
       </div>
-      <div class="one-sheet-sounds-like col s3 l3 offset-s2 offset-l2">
+      <div class="one-sheet-sounds-like col s3 l3 offset-s1 offset-l right">
         <h5>Sounds Like</h5>
         <ul>
           <li><%= @customer.sounds_like1 %></li>
@@ -15,11 +15,45 @@
     </div>
     <div class="row">
       <div class="one-sheet-main-photo col s9 l9">
-        <%= image_tag(@customer.main_photo.url, style:"max-height: 420px; width: 100%; object-fit: contain") %>
+       	<%= image_tag(@customer.main_photo.url, style:"max-height: 420px; width: 100%; object-fit: contain") %>
       </div>
-      <div class="side-photos col s3 l3">
-        <%= image_tag(@customer.live_photo.url, style:"height: auto; width: 100%; object-fit: contain") %>
-        <%= image_tag(@customer.misc_photo1.url, style: "height: auto; width: 100%; object-fit: contain", id: "misc_photo1") %>
+      <div class="one-sheet-icons col s3 l3">
+      	<% if @customer.soundcloud != "" %>
+      		<div class="col s7 push-s4 l7 push-l4">
+      	  	<%= link_to image_tag("soundcloud-icon.png", style: "width: 60%;" ), @customer.soundcloud, title: @customer.soundcloud %>
+          </div>
+        <% else %>
+        	<div class="col s7 push-s4 l7 push-l5">
+        		<%= image_tag("greycircle.png", style: "height: auto; width: 15%; padding-top: 10px; padding-bottom: 20px; object-fit: contain;") %>
+        	</div>
+        <% end %>
+        <% if @customer.youtube != "" %>
+        	<div class="col s7 push-s4 l7 push-l4">
+          	<%= link_to image_tag("youtube-icon.png", style: "width: 60%;"), @customer.youtube, title: @customer.youtube   %>
+      	  </div>
+      	<% else %>
+      	  <div class="col s7 push-s4 l7 push-l5">
+        		<%= image_tag("greycircle.png", style: "height: auto; width: 15%; padding-top: 10px; padding-bottom: 20px; object-fit: contain;") %>
+     	  	</div>
+     	  <% end %>
+     	  <% if @customer.bandcamp != "" %>
+     	   	<div class="col s7 push-s4 l7 push-l4">
+     	    	<%= link_to image_tag("bandcamp-icon.png", style: "width: 60%;"), @customer.bandcamp, title: @customer.bandcamp %>
+      	  </div>
+      	<% else %>
+      		<div class="col s7 push-s4 l7 push-l5">
+        		<%= image_tag("greycircle.png", style: "height: auto; width: 15%; padding-top: 10px; padding-bottom: 20px; object-fit: contain;") %>
+      		</div>
+      	<% end %>
+      	<% if @customer.other_site != "" %>
+      		<div class="col s7 push-s4 l7 push-l4">
+      	    <%= link_to image_tag("other-site-icon.png", style: "width: 60%; padding-bottom: 20px;"), @customer.other_site, title: @customer.other_site %>
+      	  </div>
+      	<% else %>
+      		<div class="col s7 push-s4 l7 push-l5">
+        		<%= image_tag("greycircle.png", style: "height: auto; width: 15%; padding-top: 10px; padding-bottom: 20px; object-fit: contain;") %>
+      		</div>
+      	<% end %>
       </div>
     </div>
     <div class="row">
@@ -29,42 +63,43 @@
     </div>
     <div class="row center press-links-row">
       <div class="one-sheet-misc-2 col s4 l4">
-        <%= image_tag(@customer.misc_photo2.url, style: "height: 150px; width: 100%; object-fit: contain") %>
+      	<% if @customer.misc_photo2.url == @missing_image_url %>
+      		<%= image_tag("https://s3.amazonaws.com/bandturomanagement/bandturo-logo.png", style: "height: auto; width: 100%; padding-top: 30px; object-fit: fill;") %>
+      	<% else %>
+        	<%= image_tag(@customer.misc_photo2.url, style: "height: 180px; width: 100%; object-fit: contain;") %>
+        <% end %>
       </div>
-      <div class="one-sheet-press-links col s4 l4">
-        <% if @customer.press_link1 != nil %>
+      <div class="col s4 l4">
+      	<% if @customer.misc_photo1.url == @missing_image_url %>
+        	<h6><%= button_to("View Website", @customer.website, class: "btn") %></h6>
+        	<h5 class="phone"><%= @customer.phone %></h5>
+        <% else %>
+      	  <%= image_tag(@customer.misc_photo1.url, style: "height: 180px; width: 100%; object-fit: contain;", id: "misc_photo1") %>
+      	<% end %>
+      </div>
+      <div class="col s4 l4">
+        <% if @customer.live_photo.url == @missing_image_url %>
+        	<%= image_tag("triangle1.png", style: "height: 180px; width: 100%; object-fit: contain; padding-top: 20px;", class: "left") %>
+        <% else %>
+          <%= image_tag(@customer.live_photo.url, style:"height: 180px; width: 100%; object-fit: contain;") %>
+        <% end %>
+      </div>
+    </div>
+    <div class="row">
+    	<% if @customer.press_link1 != "" %>
+        <div class="col s6 l6 offset-s3 offset-l3 one-sheet-press-links center">
           <h5><%= image_tag("news-icon.png", style: "width: 10%;") %> PRESS</h5>
           <%= link_to(@customer.press_link1, @customer.press_link1) %>
           <%= link_to(@customer.press_link2, @customer.press_link2) %>
           <%= link_to(@customer.press_link3, @customer.press_link3) %>
-        <% end %>
-      </div>
-      <div class="col s4 l4">
-        <div class="col s12 l12 one-sheet-icons">
-          <div class="col s5 l5 one-sheet-icon">
-            <% if @customer.soundcloud != nil %>
-              <%= link_to image_tag("soundcloud-icon.png", width: "60%;"), @customer.soundcloud, title: @customer.soundcloud %>
-            <% end %>
-            <% if @customer.youtube != nil %>
-              <%= link_to image_tag("youtube-icon.png", width: "60%;"), @customer.youtube, title: @customer.youtube   %>
-            <% end %>
-          </div>
-          <div class="col s5 l5 one-sheet-icon">
-            <% if @customer.bandcamp != nil %>
-              <%= link_to image_tag("bandcamp-icon.png", width: "60%;"), @customer.bandcamp, title: @customer.bandcamp %>
-            <% end %> 
-            <% if @customer.other_site != nil %>
-              <%= link_to image_tag("other-site-icon.png", width: "60%;"), @customer.other_site, title: @customer.other_site %>
-            <% end %>
-          </div>
         </div>
-      </div>
+      <% end %>  
     </div>
     <div class="row">
       <div class="col s12 l12 center">
-        <h5><%= link_to(@customer.website, @customer.website) %></h5>
-        <% if @customer.phone != nil %>
-            <h5 class="phone"><%= @customer.phone %></h5>
+      	<% if @customer.website != "" %>
+        	<h6><%= button_to("View Website", @customer.website, class: "btn") %></h6>
+        	<h5 class="phone"><%= @customer.phone %></h5>
         <% end %>
       </div>
     </div>
